Alteração do BD, implementações para validação e finalização
